Вся координация работы репозиториев перенесена в сервисный слой.